Реалізація Branch філій, реалізовані всі файли але треба покращувати, та доопрацьовувати певні аспекти із not used/not implemented.